--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <!--start - first card "Begin"-->
     <div id="beginDiv" class="begin">
-        <h1>Ready to Test your skills?</h1>
-            <p>For each question you answer incorrectly, time will be deducted from your remainder.</p>
+        <h1>Think you know McDonald's?</h1>
+            <p>For each question you answer incorrectly, 20 seconds will be deducted from your time.</p>
         <button id="start"class="btnStyle">Lets Go!</button>
     </div>
     <!--end - first card "Begin"-->
