fixed questions -js / added mediaQ -css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--start - first card "Begin"-->
     <div id="beginDiv" class="begin">
         <h1>Think you know McDonald's?</h1>
-            <p>For each question you answer incorrectly, 20 seconds will be deducted from your time.</p>
+            <p>You will recieve +5 points for each correct answer, and 20 seconds will be deducted from your time for incorrect answers.</p>
         <button id="start"class="btnStyle">Lets Go!</button>
     </div>
     <!--end - first card "Begin"-->
@@ -62,10 +62,10 @@
             
             <div id="scoreBoard" class="list-group list-group-flush pt-2 pb-3 mb-2"></div>
     
-            <!-- append each highscore as new paragraph here -->
+            <!-- append each highscore here -->
             <p>
-                <button type="submit" class="btn btn-info mt-3 mr-3" id="restart">Go Back</button>
-                <button type="submit" class="btn btn-info mt-3" id="clearScoreBoard">Clear High Scores</button>
+                <button type="submit" class="btn btn-outline-warning mt-3" id="restart">Go Back</button>
+                <button type="submit" class="btn btn-outline-warning mt-3" id="clearScoreBoard">Clear High Scores</button>
             </p>
         </div>
     </div>
